2011-02-18  Emil A Eklund  <eae@chromium.org>

        Reviewed by Darin Adler.

        Crash in EventHandler::sendContextMenuEventForKey
        https://bugs.webkit.org/show_bug.cgi?id=54495

        Add test for triggering the context menu key event (VK_APPS) on a hidden
        element.

        * fast/events/menu-keydown-on-hidden-element-expected.txt: Added.
        * fast/events/menu-keydown-on-hidden-element.html: Added.

2011-02-18  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        [Qt] Add Qt specific expected results for passing svg/custom tests.

        * platform/qt/Skipped: Unskip passing tests.
        * platform/qt/svg/custom/ [...] : Added.

2011-02-18  Andrew Wilson  <atwilson@chromium.org>

        Unreviewed expectations change.

        * platform/chromium/test_expectations.txt:

2011-02-18  Andrew Wilson  <atwilson@chromium.org>

        Unreviewed rebaselines for Chromium.

        * platform/chromium-mac/compositing/reflections/deeply-nested-reflections-expected.checksum: Added.
        * platform/chromium-mac/compositing/reflections/deeply-nested-reflections-expected.png: Added.
        * platform/chromium-mac/css1/box_properties/clear_float-expected.checksum:
        * platform/chromium-mac/css1/box_properties/clear_float-expected.png:
        * platform/chromium-mac/css1/box_properties/float_elements_in_series-expected.checksum: Added.
        * platform/chromium-mac/css1/box_properties/float_elements_in_series-expected.png: Added.
        * platform/chromium-mac/css1/box_properties/float_on_text_elements-expected.checksum:
        * platform/chromium-mac/css1/box_properties/float_on_text_elements-expected.png:
        * platform/chromium-mac/css1/text_properties/text_align-expected.checksum: Added.
        * platform/chromium-mac/css1/text_properties/text_align-expected.png: Added.
        * platform/chromium-mac/css2.1/t0805-c5518-brdr-t-01-e-expected.checksum: Added.