@@ -161,6 +161,13 @@ PASS Date.parse("anf 25 1995 gmt") is NaN
 PASS Date.parse("Wed Dec 25 1995 1:30 GMT") == 819855000000 is true
 PASS Date.parse("WED DEC 25 1995 1:30 GMT") == 819855000000 is true
 PASS Date.parse("wed dec 25 1995 1:30 gmt") == 819855000000 is true
+PASS Date.parse("Wed Dec 25 1:30 1995 GMT") == 819855000000 is true
+PASS Date.parse("WED DEC 25 1:30 1995 GMT") == 819855000000 is true
+PASS Date.parse("wed dec 25 1:30 1995 gmt") == 819855000000 is true
+PASS Date.parse("Wed Dec 25 1:30 1995GMT") == 819855000000 is true
+PASS Date.parse("Wed Dec 25 1:30 1995 2010 GMT") is NaN
+PASS Date.parse("Wed Dec 25 1:30 1995r GMT") is NaN
+PASS Date.parse("Wed 1:30 Dec 25 GMT") is NaN
 PASS Date.parse("Dec 25" + String.fromCharCode(9) + "1995 13:30 GMT") == 819898200000 is true
 PASS Date.parse(("Dec 25" + String.fromCharCode(9) + "1995 13:30 GMT").toUpperCase()) == 819898200000 is true
 PASS Date.parse(("Dec 25" + String.fromCharCode(9) + "1995 13:30 GMT").toLowerCase()) == 819898200000 is true
